--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,10 +16,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
 	position: relative;
 	box-sizing: border-box;
-	font-family: 'Pretendard-Regular';
+	font-family: 'NanumSquareNeo-Variable';
 }
 
 @layer base {
